// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button field should render button 1`] = `
<FieldTemplate
  description="Click here to trigger a trigger"
  errorMessage="This is wrong"
  id="myForm"
  isValid={true}
>
  <button
    className="btn"
    id="myForm"
    onClick={[Function]}
    type="button"
  >
    Boom !
  </button>
</FieldTemplate>
`;

exports[`Button field should render button with provided type 1`] = `
<FieldTemplate
  description="Click here to trigger a trigger"
  errorMessage="This is wrong"
  id="myForm"
  isValid={true}
>
  <button
    className="btn"
    id="myForm"
    onClick={[Function]}
    type="submit"
  >
    Boom !
  </button>
</FieldTemplate>
`;
